--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -2,15 +2,13 @@
   width: 40%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   gap: 4rem;
   padding: 1rem;
 }
 
 .formContainer label {
   flex-basis: 50%;
-  font-size: 1.8rem;
-  padding-left: 40px;
+  font-size: 2rem;
   color: #333333;
 }
 
@@ -24,7 +22,6 @@
 .difficultyContainer,
 .categoryContainer {
   display: flex;
-  align-items: center;
 }
 
 .questionsContainer input,
@@ -46,9 +43,14 @@ select:focus {
   outline: none;
 }
 
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 button {
-  margin-top: 8rem;
-  margin-left: 200px;
+  margin-top: 7rem;
   width: 400px;
   background-image: linear-gradient(90deg, #ff00cc, #3333ff);
   color: #ffffff;
