--- a/src/components/NumberOfQuestions/NumberOfQuestions.module.css
+++ b/src/components/NumberOfQuestions/NumberOfQuestions.module.css
@@ -2,6 +2,10 @@
   display: flex;
 }
 
+.questionsContainer label {
+  color: #751191;
+}
+
 .questionsContainer input {
   padding: 10px;
   border-radius: 20px;
