--- a/src/components/QuizQuestions/QuizQuestions.module.css
+++ b/src/components/QuizQuestions/QuizQuestions.module.css
@@ -1,19 +1,57 @@
-.questionsContainer {
+.quizContainer {
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
 
+.questionsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: center;
+}
+
+.questionsContainer h1 {
+  color: #751191;
+  font-size: 1.6rem;
+}
+
 .questionsContainer span {
-  border: 1px solid red;
+  background-color: #e0aaff;
+  color: rgb(34, 34, 167);
+  border: 2px solid #e0aaff;
   border-radius: 20px;
   padding: 10px;
-  font-size: 1rem;
-  width: 80%;
+  font-size: 1.2rem;
+  width: 600px;
+  font-weight: 500;
   transition: transform 0.3s ease, color 0.3s ease;
 }
 
 .questionsContainer span:hover {
+  background-color: #ff85b3;
+  border-color: #ff85b3;
+  color: #fff;
   cursor: pointer;
   transform: translateX(10px);
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: end;
+}
+
+.buttonContainer button {
+  width: 210px;
+  padding: 10px;
+}
+
+.correctAnswer {
+  background-color: green;
+  color: white;
+}
+
+.incorrectAnswer {
+  background-color: red;
+  color: white;
 }
