--- a/src/components/NumberOfQuestions/NumberOfQuestions.module.css
+++ b/src/components/NumberOfQuestions/NumberOfQuestions.module.css
@@ -1,9 +1,6 @@
 .questionsContainer {
   display: flex;
-}
-
-.questionsContainer label {
-  color: #751191;
+  justify-content: center;
 }
 
 .questionsContainer input {
@@ -12,12 +9,27 @@
   border: 1px solid #ccc;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
-  width: 100%;
   font-size: 1.1rem;
+}
+
+.questionsContainer input::placeholder {
+  color: rgb(184, 41, 184);
+  font-weight: 600;
 }
 
 input:focus {
   border-color: purple;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   outline: none;
+}
+
+.visuallyHidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
 }
