--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 html {
   scroll-behavior: smooth;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 body {
@@ -21,9 +22,11 @@ button:hover {
 
 .appContainer {
   height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1rem;
   gap: 6rem;
+  overflow-x: hidden;
 }
