--- a/src/components/CategorySelect/CategorySelect.module.css
+++ b/src/components/CategorySelect/CategorySelect.module.css
@@ -1,22 +1,20 @@
-.categoryContainer select {
-  flex-basis: 50%;
-}
-
 .categoryContainer {
   display: flex;
   justify-content: center;
+  align-items: center;
+  width: 50%;
 }
 
 .categoryContainer select {
+  flex-basis: 50%;
   padding: 10px;
   border-radius: 20px;
   border: 1px solid #ccc;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease;
-  width: 100%;
   font-size: 1.1rem;
-  color: rgb(184, 41, 184);
   font-weight: 600;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  color: rgb(184, 41, 184);
 }
 
 .categoryContainer select option {
@@ -39,4 +37,46 @@ select:focus {
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   border: 0;
+}
+
+/* Media Queries */
+
+@media (min-width: 320px) and (max-width: 420px) {
+  .categoryContainer {
+    width: 150%;
+  }
+
+  .categoryContainer select {
+    font-size: 0.7rem;
+  }
+}
+
+@media (min-width: 421px) and (max-width: 600px) {
+  .categoryContainer {
+    width: 140%;
+  }
+
+  .categoryContainer select {
+    font-size: 0.9rem;
+  }
+}
+
+@media (min-width: 601px) and (max-width: 750px) {
+  .categoryContainer {
+    width: 140%;
+  }
+
+  .categoryContainer select {
+    font-size: 1.1rem;
+  }
+}
+
+@media (min-width: 751px) and (max-width: 1124px) {
+  .categoryContainer {
+    width: 90%;
+  }
+
+  .categoryContainer select {
+    font-size: 1.2rem;
+  }
 }
