--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,7 +1,9 @@
 .formContainer {
-  width: 40%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   gap: 4rem;
   padding: 1rem;
 }
@@ -23,19 +25,49 @@
 }
 
 button {
-  margin-top: 7rem;
-  width: 400px;
-  background-image: linear-gradient(90deg, #ff00cc, #3333ff);
-  color: #ffffff;
   padding: 10px 20px;
+  margin-top: 7rem;
+  width: 25rem;
+  background-image: linear-gradient(90deg, #ff00cc, #3333ff);
   border-radius: 20px;
   border: none;
   font-weight: bold;
   font-size: 1.3rem;
   transition: background 0.3s ease, box-shadow 0.3s ease;
+  color: #ffffff;
 }
 
 button:hover {
   background-image: linear-gradient(90deg, #d600b0, #1a1aff);
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+/* Media Queries*/
+
+@media (min-width: 320px) and (max-width: 420px) {
+  button {
+    width: 50vw;
+    margin-top: 5rem;
+  }
+}
+
+@media (min-width: 421px) and (max-width: 600px) {
+  button {
+    width: 51vw;
+    margin-top: 5rem;
+  }
+}
+
+@media (min-width: 601px) and (max-width: 750px) {
+  button {
+    width: 51vw;
+    margin-top: 5rem;
+  }
+}
+
+@media (min-width: 751px) and (max-width: 1124px) {
+  button {
+    width: 35vw;
+    margin-top: 5rem;
+  }
 }
