--- a/src/components/NumberOfQuestions/NumberOfQuestions.module.css
+++ b/src/components/NumberOfQuestions/NumberOfQuestions.module.css
@@ -1,15 +1,18 @@
 .questionsContainer {
   display: flex;
   justify-content: center;
+  align-items: center;
+  width: 50%;
 }
 
 .questionsContainer input {
+  flex-basis: 50%;
   padding: 10px;
   border-radius: 20px;
   border: 1px solid #ccc;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease;
   font-size: 1.1rem;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .questionsContainer input::placeholder {
@@ -32,4 +35,46 @@ input:focus {
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   border: 0;
+}
+
+/* Media Queries*/
+
+@media (min-width: 320px) and (max-width: 420px) {
+  .questionsContainer {
+    width: 150%;
+  }
+
+  .questionsContainer input {
+    font-size: 0.7rem;
+  }
+}
+
+@media (min-width: 421px) and (max-width: 600px) {
+  .questionsContainer {
+    width: 140%;
+  }
+
+  .questionsContainer input {
+    font-size: 0.9rem;
+  }
+}
+
+@media (min-width: 601px) and (max-width: 750px) {
+  .questionsContainer {
+    width: 140%;
+  }
+
+  .questionsContainer input {
+    font-size: 1.1rem;
+  }
+}
+
+@media (min-width: 751px) and (max-width: 1124px) {
+  .questionsContainer {
+    width: 90%;
+  }
+
+  .questionsContainer input {
+    font-size: 1.2rem;
+  }
 }
