--- a/src/components/QuizQuestions/QuizQuestions.module.css
+++ b/src/components/QuizQuestions/QuizQuestions.module.css
@@ -1,32 +1,34 @@
 .quizContainer {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 2rem;
 }
 
 .questionsContainer {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
   align-items: center;
+  gap: 2rem;
+  width: 70rem;
 }
 
 .questionsContainer h1 {
-  color: #751191;
   font-size: 1.6rem;
   font-weight: 900;
+  color: #751191;
 }
 
 .quizContainer .questionsContainer button {
   all: unset;
-  background-color: #e0aaff;
-  color: rgb(34, 34, 167);
+  padding: 10px;
+  width: 35rem;
   border: 2px solid #e0aaff;
   border-radius: 20px;
-  padding: 10px;
   font-size: 1.2rem;
-  width: 600px;
   font-weight: 500;
+  background-color: #e0aaff;
+  color: rgb(34, 34, 167);
   transition: transform 0.3s ease, color 0.3s ease;
 }
 
@@ -43,6 +45,7 @@
   display: flex;
   justify-content: space-between;
   align-items: end;
+  width: 50rem;
 }
 
 .buttonContainer {
@@ -51,7 +54,7 @@
 }
 
 .buttonContainer button {
-  width: 200px;
+  width: 12rem;
   padding: 10px;
   margin: 0;
 }
@@ -71,4 +74,106 @@
 .questionsContainer button:focus {
   transform: translateX(100px);
   transition: transform 0.3s ease;
+}
+
+/* Media Queries */
+
+@media (min-width: 320px) and (max-width: 600px) {
+  .questionsContainer {
+    width: 20rem;
+  }
+
+  .questionsContainer h1 {
+    font-size: 1.2rem;
+    text-align: center;
+  }
+
+  .quizContainer .questionsContainer button {
+    width: 60vw;
+    font-size: 0.8rem;
+  }
+
+  .timerAndButton {
+    width: 20rem;
+  }
+
+  .buttonContainer button {
+    width: 25vw;
+    font-size: 0.9rem;
+  }
+}
+
+@media (min-width: 601px) and (max-width: 800px) {
+  .questionsContainer {
+    width: 30rem;
+  }
+
+  .questionsContainer h1 {
+    font-size: 1.4rem;
+    text-align: center;
+  }
+
+  .quizContainer .questionsContainer button {
+    width: 60vw;
+    font-size: 1rem;
+  }
+
+  .timerAndButton {
+    width: 35rem;
+  }
+
+  .buttonContainer button {
+    width: 25vw;
+    font-size: 1.1rem;
+  }
+}
+
+@media (min-width: 801px) and (max-width: 1024px) {
+  .questionsContainer {
+    width: 60rem;
+  }
+
+  .questionsContainer h1 {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+
+  .quizContainer .questionsContainer button {
+    width: 50vw;
+    font-size: 1rem;
+  }
+
+  .timerAndButton {
+    width: 35rem;
+  }
+
+  .buttonContainer button {
+    width: 20vw;
+    font-size: 1.1rem;
+  }
+}
+
+@media (min-width: 1025px) and (max-width: 1300px) {
+  .questionsContainer {
+    width: 80rem;
+  }
+
+  .questionsContainer h1 {
+    font-size: 1.8rem;
+    text-align: center;
+  }
+
+  .quizContainer .questionsContainer button {
+    width: 40vw;
+    font-size: 1.1rem;
+  }
+
+  .timerAndButton {
+    width: 45rem;
+  }
+
+  .buttonContainer button {
+    width: 17vw;
+    font-size: 1.3rem;
+  }
 }
