--- a/src/components/Timer/Timer.module.css
+++ b/src/components/Timer/Timer.module.css
@@ -2,15 +2,61 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100px;
-  height: 100px;
-  margin: 0;
   border: 5px solid rgb(158, 27, 158);
   border-radius: 50%;
+  margin: 0;
+  width: 6rem;
+  height: 6rem;
 }
 
 .timerContainer span {
   font-size: 2rem;
-  color: rgb(86, 28, 94);
   font-weight: bold;
+  color: rgb(86, 28, 94);
+}
+
+/* Media Queries*/
+
+@media (min-width: 320px) and (max-width: 600px) {
+  .timerContainer {
+    width: 4rem;
+    height: 4rem;
+  }
+
+  .timerContainer span {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 601px) and (max-width: 800px) {
+  .timerContainer {
+    width: 6rem;
+    height: 6rem;
+  }
+
+  .timerContainer span {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 801px) and (max-width: 1024px) {
+  .timerContainer {
+    width: 6rem;
+    height: 6rem;
+  }
+
+  .timerContainer span {
+    font-size: 2rem;
+  }
+}
+
+@media (min-width: 1025px) and (max-width: 1300px) {
+  .timerContainer {
+    width: 7rem;
+    height: 7rem;
+  }
+
+  .timerContainer span {
+    font-size: 2rem;
+  }
 }
