--- a/src/components/Results/Results.module.css
+++ b/src/components/Results/Results.module.css
@@ -6,6 +6,38 @@
 
 .resultsContainer p {
   color: navy;
-  font-size: 3em;
+  font-size: 3rem;
   font-style: italic;
+}
+
+/* Media Queries */
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .resultsContainer {
+    width: 70%;
+  }
+
+  .resultsContainer p {
+    font-size: 1.7rem;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 700px) {
+  .resultsContainer {
+    width: 70%;
+  }
+
+  .resultsContainer p {
+    font-size: 2.1rem;
+  }
+}
+
+@media (min-width: 701px) and (max-width: 1024px) {
+  .resultsContainer {
+    width: 80%;
+  }
+
+  .resultsContainer p {
+    font-size: 2.2rem;
+  }
 }
